# opennovelv2

./: .gitignore  Cargo.toml  README.md
apps/web/: Cargo.toml
apps/web/frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
apps/web/frontend/src/: app.css  app.html
apps/web/frontend/src/lib/api/: client.ts  stream.ts
apps/web/frontend/src/lib/components/: AgentStatusPanel.svelte  BookList.svelte  ChatPage.svelte  MessageInput.svelte  MessageList.svelte  ProviderCard.svelte
apps/web/frontend/src/lib/stores/: actions.ts  index.ts
apps/web/frontend/src/routes/: +layout.svelte  +page.svelte
apps/web/frontend/src/routes/books/[id]/: +page.svelte  +page.ts
apps/web/frontend/src/routes/settings/: +page.svelte
apps/web/src/: main.rs  routes.rs  state.rs
docs/: AI_READER_V2_INTEGRATION_ANALYSIS.md  AI_READER_V2_MCP_INTEGRATION.md  COMPONENT_SYSTEM.md  IMPLEMENTATION_PLAN_INDEX.md  OH_MY_OPENCODE_RESEARCH.md  SKILLS_AND_HOOKS_DESIGN.md
docs/phase10/: 01-overview.md
docs/phase8/: 01-overview.md  02-ui-design.md  03-interaction-logic.md
docs/phase9/: 01-overview.md
