[workspace]
resolver = "2"
members = [
    # Phase 0: SDK核心
    "packages/sdk/core",
    "packages/sdk/config",
    
    # Phase 1: 知识库系统
    "packages/knowledge/core",
    "packages/knowledge/character-db",
    "packages/knowledge/foreshadowing-pool",
    "packages/knowledge/timeline",
    "packages/knowledge/world-graph",
    "packages/knowledge/kv-stores",
    "packages/knowledge/plot-kb",
    "packages/knowledge/style-kb",
    "packages/knowledge/context-kb",
    "packages/knowledge/revision-kb",
    "packages/knowledge/query-system",
    
    # Phase 2: 文本工具链
    "packages/text-tools/editor",
    "packages/text-tools/counter",
    "packages/text-tools/style-checker",
    "packages/text-tools/search",
    "packages/text-tools/segment",
    
    # Phase 3: 协作系统
    "packages/collaboration/annotation",
    "packages/collaboration/conflict",
    "packages/collaboration/proactive",
    "packages/collaboration/group-chat",
    "packages/collaboration/agent-lock",
    
    # Phase 4: 分析系统
    "packages/analysis/style",
    "packages/analysis/emotion",
    "packages/analysis/pacing",
    "packages/analysis/consistency",
    
    # Phase 5: 同步系统
    "packages/sync/webdav",
    "packages/sync/sync-manager",
    "packages/sync/conflict-resolver",
    
    # 应用
    "apps/web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenNovel Team"]
license = "MIT"
repository = "https://github.com/jcy321/opennovel-core"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# HTTP客户端
reqwest = { version = "0.11", features = ["json", "stream"] }
reqwest-eventsource = "0.5"

# 正则表达式
regex = "1.10"

# 向量数据库
qdrant-client = "1.7"

# Web框架（后端）
axum = { version = "0.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# 验证
validator = { version = "0.16", features = ["derive"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# 内部包
    novel-sdk-core = { path = "packages/sdk/core" }
    novel-sdk-config = { path = "packages/sdk/config" }
    novel-knowledge-core = { path = "packages/knowledge/core" }
    novel-knowledge-character-db = { path = "packages/knowledge/character-db" }
novel-knowledge-foreshadowing-pool = { path = "packages/knowledge/foreshadowing-pool" }
novel-knowledge-timeline = { path = "packages/knowledge/timeline" }
novel-knowledge-world-graph = { path = "packages/knowledge/world-graph" }
novel-knowledge-kv-stores = { path = "packages/knowledge/kv-stores" }
    novel-knowledge-plot-kb = { path = "packages/knowledge/plot-kb" }
    novel-knowledge-style-kb = { path = "packages/knowledge/style-kb" }
    novel-knowledge-context-kb = { path = "packages/knowledge/context-kb" }
    novel-knowledge-revision-kb = { path = "packages/knowledge/revision-kb" }
    novel-knowledge-query-system = { path = "packages/knowledge/query-system" }
novel-text-editor = { path = "packages/text-tools/editor" }
novel-text-counter = { path = "packages/text-tools/counter" }
novel-text-style-checker = { path = "packages/text-tools/style-checker" }
novel-text-search = { path = "packages/text-tools/search" }
novel-text-segment = { path = "packages/text-tools/segment" }
novel-collab-annotation = { path = "packages/collaboration/annotation" }
novel-collab-conflict = { path = "packages/collaboration/conflict" }
novel-collab-proactive = { path = "packages/collaboration/proactive" }
novel-collab-group-chat = { path = "packages/collaboration/group-chat" }
novel-collab-agent-lock = { path = "packages/collaboration/agent-lock" }
novel-analysis-style = { path = "packages/analysis/style" }
novel-analysis-emotion = { path = "packages/analysis/emotion" }
novel-analysis-pacing = { path = "packages/analysis/pacing" }
novel-analysis-consistency = { path = "packages/analysis/consistency" }
novel-sync-webdav = { path = "packages/sync/webdav" }
novel-sync-manager = { path = "packages/sync/sync-manager" }
novel-conflict-resolver = { path = "packages/sync/conflict-resolver" }